# local-llm

./: README.md  pyproject.toml
finetune/: interactive_chat.py  main.py
finetune/data/: tdk_rises.json
huggingface/: interactive_chat.py  model_info.ipynb  one_shot_chat.py  tokenizer_info.ipynb
server/: client_chat.py
vllm/: interactive_chat.py
