[tool.poetry]
name = "local-llm"
version = "0.1.0"
description = "locally hosted llm"
authors = ["Nick Woods <nickw9000@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.57.1"
numpy = "^2.3.4"
accelerate = "^1.11.0"
sentencepiece = "^0.2.1"
bitsandbytes = "^0.48.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[tool.pyrefly]
project-includes = ["**/*.py*"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
